--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                         <img src="./images/hat.png" alt="" width="130">
                     </div>
                 </div>
-                <div class="date__of__birth">
+                <div class="02 SEPT 2025">
                     <span></span>
                 </div>
                 <div class="btn">
                     <button id="btn__letter">
                         <div class="mail">
-                            Click Here Mehwish
+                            Click Here Vanessa
                             <i class="fa-regular fa-envelope"></i>
                         </div>
                     </button>
@@ -66,9 +66,9 @@
                     <div class="image">
                         <img src="./images/unnamed.png" alt="">
                     </div>
-                    <div class="name">
+                    <div class="Vanessa">
                         <i class="fa-solid fa-heart"></i>
-                        <span>Dear Mehwish</span>
+                        <span>Dear vanessa</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div class="balloon_one">
@@ -129,7 +129,7 @@
                     <div class="userImg">
                         <img src="images/unnamed.png" alt="">
                     </div>
-                    <h4 class="username">To: Mehwish 💖<span class="underline"></span></h4>
+                    <h4 class="username">To: Vanessa 💖<span class="underline"></span></h4>
 
                     <h3>Happy Birthday</h3>
                     <div class="imageCute">
